oh that was *not* doing what I thought it was why did it work locally???